--- a/color-palette-generator/index.html
+++ b/color-palette-generator/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
@@ -33,7 +33,7 @@
 
   <!-- PWA & Manifest -->
   <link rel="manifest" href="/manifest.json" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="apple-touch-icon" href="/favicon128.png" />
 
   <!-- Dark Mode Initial Check (Prevent FOUC) -->
   <script>
