--- a/color-palette-generator/index.html
+++ b/color-palette-generator/index.html
@@ -45,6 +45,10 @@
       }
     })();
   </script>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3550535610382365"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
