--- a/color-palette-generator/index.html
+++ b/color-palette-generator/index.html
@@ -30,6 +30,7 @@
   <meta property="twitter:description"
     content="Generate beautiful, AI-powered color palettes from your photos instantly. Extract dominant colors, copy HEX/RGB/HSL codes, and visualize them." />
   <meta property="twitter:image" content="https://chromatic-ai.netlify.app/og-image.jpg" />
+  <meta name="google-adsense-account" content="ca-pub-3550535610382365">
 
   <!-- PWA & Manifest -->
   <link rel="manifest" href="/manifest.json" />
